--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -5,21 +5,21 @@
   apt_repository: >
     repo='ppa:ondrej/php5-oldstable'
     state=present
-  when: php_version == "5.4"
+  when: php_version == 5.4
   tags: php
 
 - name: Add PHP 5.5 PPA
   apt_repository: >
     repo='ppa:ondrej/php5'
     state=present
-  when: php_version == "5.5"
+  when: php_version == 5.5
   tags: php
 
 - name: Add PHP 5.6 PPA
   apt_repository: >
     repo='ppa:ondrej/php5-5.6'
     state=present
-  when: php_version == "5.6"
+  when: php_version == 5.6
   tags: php
 
 - name: Install PHP packages
