Add cache_valid_time parameter to apt task

--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -23,6 +23,6 @@
   tags: php
 
 - name: Install PHP packages
-  apt: name={{ item }} state=present update_cache=yes
+  apt: name={{ item }} state=present update_cache=yes cache_valid_time=3600
   with_items: php_packages
   tags: php
