--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -16,6 +16,6 @@
   tags: php
 
 - name: Install PHP packages
-  apt: name={{ item }} state=present update_cache=yes cache_valid_time=3600
+  apt: name={{ item }} state=present update_cache=yes
   with_items: php_packages
   tags: php
